2015-01-04  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_omp.c (get_config): Get credentials information.

	* src/html/classic/omp.xsl (preference-details, edit-config-preference):
	Handle osp_credential_username and osp_credential_password.

2015-01-04  Matthew Mundell <matthew.mundell@greenbone.net>

	Add version to login page header.  Add option --vendor-version, so that
	the user can override the version (in the header and on the About page).

	* src/gsad.c (request_handler): Add VERSION and VENDOR_VERSION to
	ENVELOPE.
	(main): Add --vendor-version.

	* src/gsad_base.c (vendor_version): New variable.
	(vendor_version_set, vendor_version_get): New function.
	(login_xml): Add VENDOR_VERSION to LOGIN_PAGE.

	* src/gsad_base.h: Add headers accordingly.

	* src/gsad_omp.c (xsl_transform_omp): Add VERSION and VENDOR_VERSION to
	ENVELOPE.

	* src/html/classic/gsad.xsl (login_page): Set header version from XML.
	(version, vendor_version): New dummy templates.

	* src/html/classic/help.xsl (help [about]): Set version from XML.

2015-01-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (create_report_omp, create_container_task_omp)
	(create_task_omp, move_task_omp, save_credential_omp)
	(create_agent_omp, get_aggregate_omp, create_target_omp): Return
	response from "omp" when return value is -1, because in this case
	there is no entity available, so a break leads to a segfault.

2015-01-04  Matthew Mundell <matthew.mundell@greenbone.net>

	Consolidate multiple login XML locations into single function.

	* src/gsad_base.c (login_xml): New function.

	* src/gsad_base.h: Add header accordingly.

	* src/gsad.c (exec_omp_post, file_content_response)
	(request_handler): Use login_xml to generate login XML.

	* src/gsad_omp.c (logout): Use login_xml to generate login XML.

2015-12-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Make resource icons appear properly in help pages.
